--- a/css/beepbeep.css
+++ b/css/beepbeep.css
@@ -5,6 +5,7 @@ body {
 }
 
 ul.navb {
+    font-family:Arial, Helvetica, sans-serif;
     list-style-type: none;
     background-color: #1E1E1E;
     margin-bottom: 2;
@@ -129,5 +130,17 @@ ul.navb li a:hover {
 
 .title {
     color: #ffffff;
+    text-align:center;
+    margin-top: 20px;
 }
-   
+
+.d {
+    text-align: center;
+    color: #ffffff;
+    display: block;
+    
+}
+
+.DA {
+    margin-top: 15px ;
+}
