--- a/css/beepbeep.css
+++ b/css/beepbeep.css
@@ -121,7 +121,12 @@ ul.navb li a:hover {
     margin-top: 80px;
     margin-left:30px;
 }
-
+.column.act {
+    width: 30%;
+    padding: 15px;
+    text-align: center;
+    margin-top: 0%;
+  }
 @media screen and (max-width: 600px) {
     .column.left, .column.middle,.column.right {
       width: 100% ;
