--- a/css/beepbeep.css
+++ b/css/beepbeep.css
@@ -146,3 +146,25 @@ ul.navb li a:hover {
 .DA {
     margin-top: 20px ;
 }
+
+@media screen and (max-width: 600px) {
+    .column.act{
+      width: 100% ;
+  }
+}
+
+@media screen and (min-width: 900px) {
+    .column.middle{
+      width: 100% ;
+      border-right:none;
+  }
+}
+.activitydetail {
+    color :#ffffff;   
+}
+
+.activitydetail li a{
+    color: #ffffff;
+    text-decoration: underline;
+    padding: 7px ;
+}
