--- a/css/beepbeep.css
+++ b/css/beepbeep.css
@@ -127,11 +127,7 @@ ul.navb li a:hover {
     text-align: center;
     margin-top: 0%;
   }
-@media screen and (max-width: 600px) {
-    .column.left, .column.middle,.column.right {
-      width: 100% ;
-  }
-}
+
 .title {
     color: #ffffff;
     text-align:center;
@@ -161,4 +157,23 @@ ul.navb li a:hover {
     color: #ffffff;
     text-decoration: underline;
     padding: 7px ;
+}
+
+@media screen and (max-width: 1300px) {
+    .column.middle,.column.right {
+      width: 100% ;
+      text-align:center ;
+      margin:0px;
+      padding-left:0px;
+      border-right:none;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+    .column.left {
+      width: 100% ;
+      text-align:center ;
+      margin:0px;
+      padding:150 150px;
+  }
 }
